--- a/bin/bindings.properties
+++ b/bin/bindings.properties
@@ -25,38 +25,40 @@
 # - if the directory contains multiple versions with different classes,
 #   use a dash with the version.  (e.g. cassandra-7, cassandra-cql)
 #
-accumulo:com.yahoo.ycsb.db.accumulo.AccumuloClient
-aerospike:com.yahoo.ycsb.db.AerospikeClient
-asynchbase:com.yahoo.ycsb.db.AsyncHBaseClient
+#accumulo:com.yahoo.ycsb.db.accumulo.AccumuloClient
+#aerospike:com.yahoo.ycsb.db.AerospikeClient
+#asynchbase:com.yahoo.ycsb.db.AsyncHBaseClient
 basic:com.yahoo.ycsb.BasicDB
-cassandra-cql:com.yahoo.ycsb.db.CassandraCQLClient
-cassandra2-cql:com.yahoo.ycsb.db.CassandraCQLClient
-couchbase:com.yahoo.ycsb.db.CouchbaseClient
-couchbase2:com.yahoo.ycsb.db.couchbase2.Couchbase2Client
-dynamodb:com.yahoo.ycsb.db.DynamoDBClient
-elasticsearch:com.yahoo.ycsb.db.ElasticsearchClient
-geode:com.yahoo.ycsb.db.GeodeClient
-googlebigtable:com.yahoo.ycsb.db.GoogleBigtableClient
-googledatastore:com.yahoo.ycsb.db.GoogleDatastoreClient
-hbase094:com.yahoo.ycsb.db.HBaseClient
-hbase098:com.yahoo.ycsb.db.HBaseClient
+#cassandra-cql:com.yahoo.ycsb.db.CassandraCQLClient
+#cassandra2-cql:com.yahoo.ycsb.db.CassandraCQLClient
+#couchbase:com.yahoo.ycsb.db.CouchbaseClient
+#couchbase2:com.yahoo.ycsb.db.couchbase2.Couchbase2Client
+chronicle-map:com.yahoo.ycsb.db.ChronicleMapClient
+chronicle-q:com.yahoo.ycsb.db.ChronicleQClient
+#dynamodb:com.yahoo.ycsb.db.DynamoDBClient
+#elasticsearch:com.yahoo.ycsb.db.ElasticsearchClient
+#geode:com.yahoo.ycsb.db.GeodeClient
+#googlebigtable:com.yahoo.ycsb.db.GoogleBigtableClient
+#googledatastore:com.yahoo.ycsb.db.GoogleDatastoreClient
+#hbase094:com.yahoo.ycsb.db.HBaseClient
+#hbase098:com.yahoo.ycsb.db.HBaseClient
 hbase10:com.yahoo.ycsb.db.HBaseClient10
-hypertable:com.yahoo.ycsb.db.HypertableClient
-infinispan-cs:com.yahoo.ycsb.db.InfinispanRemoteClient
-infinispan:com.yahoo.ycsb.db.InfinispanClient
-jdbc:com.yahoo.ycsb.db.JdbcDBClient
-kudu:com.yahoo.ycsb.db.KuduYCSBClient
-mapkeeper:com.yahoo.ycsb.db.MapKeeperClient
-memcached:com.yahoo.ycsb.db.MemcachedClient
-mongodb:com.yahoo.ycsb.db.MongoDbClient
-mongodb-async:com.yahoo.ycsb.db.AsyncMongoDbClient
-nosqldb:com.yahoo.ycsb.db.NoSqlDbClient
-orientdb:com.yahoo.ycsb.db.OrientDBClient
-rados:com.yahoo.ycsb.db.RadosClient
-redis:com.yahoo.ycsb.db.RedisClient
-riak:com.yahoo.ycsb.db.riak.RiakKVClient
-s3:com.yahoo.ycsb.db.S3Client
-solr:com.yahoo.ycsb.db.SolrClient
-tarantool:com.yahoo.ycsb.db.TarantoolClient
-voldemort:com.yahoo.ycsb.db.VoldemortClient
+#hypertable:com.yahoo.ycsb.db.HypertableClient
+#infinispan-cs:com.yahoo.ycsb.db.InfinispanRemoteClient
+#infinispan:com.yahoo.ycsb.db.InfinispanClient
+#jdbc:com.yahoo.ycsb.db.JdbcDBClient
+#kudu:com.yahoo.ycsb.db.KuduYCSBClient
+#mapkeeper:com.yahoo.ycsb.db.MapKeeperClient
+#memcached:com.yahoo.ycsb.db.MemcachedClient
+#mongodb:com.yahoo.ycsb.db.MongoDbClient
+#mongodb-async:com.yahoo.ycsb.db.AsyncMongoDbClient
+#nosqldb:com.yahoo.ycsb.db.NoSqlDbClient
+#orientdb:com.yahoo.ycsb.db.OrientDBClient
+#rados:com.yahoo.ycsb.db.RadosClient
+#redis:com.yahoo.ycsb.db.RedisClient
+#riak:com.yahoo.ycsb.db.riak.RiakKVClient
+#s3:com.yahoo.ycsb.db.S3Client
+#solr:com.yahoo.ycsb.db.SolrClient
+#tarantool:com.yahoo.ycsb.db.TarantoolClient
+#voldemort:com.yahoo.ycsb.db.VoldemortClient
 
