--- a/chronicle/pom.xml
+++ b/chronicle/pom.xml
@@ -48,7 +48,7 @@ LICENSE file.
         <groupId>net.openhft</groupId>
         <artifactId>chronicle-bom</artifactId>
         <type>pom</type>
-        <version>1.13.12-SNAPSHOT</version>
+        <version>1.13.12</version>
         <scope>import</scope>
       </dependency>
 
